Align API with file retriever
